# chess-puzzle-haskell

./: README.md  chess-puzzle.cabal  prog.hs
app/: Main.hs
src/: ChessPuzzle.hs  PieceType.hs  prog.hs
test/: PieceTypeTests.hs  SolvePuzzleTest.hs  Spec.hs
