name:                chess-puzzle
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/chess-puzzle#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PieceType, ChessPuzzle
  build-depends:       base >= 4.7 && < 5
                     , HUnit
                     , containers
  default-language:    Haskell2010

executable chess-puzzle-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , chess-puzzle
                     , containers
  default-language:    Haskell2010

test-suite chess-puzzle-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , chess-puzzle
                     , HUnit
                     , containers
                     , composition
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
  other-modules:      PieceTypeTests, SolvePuzzleTest

source-repository head
  type:     git
  location: https://github.com/githubuser/chess-puzzle
